Попапы, слайдеры, формы

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,10 +163,6 @@ body {
   top: -20px;
 }
 
-.status {
-  text-decoration: none;
-}
-
 .status:hover {
   opacity: 0.6;
 }
@@ -180,15 +176,19 @@ body {
 }
 
 .navigation-section {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   margin-bottom: 30px;
 }
 
-.navigation-section-item {
-  position: relative;
+.navigation-section-bottom {
   z-index: 1;
+}
+
+.navigation-section-item {
   display: flex;
   flex-wrap: wrap;
   gap: 26px;
@@ -202,7 +202,17 @@ body {
 }
 
 .navigation-section-short {
+  text-decoration: none;
   gap: 17px;
+}
+
+.navigation-section-short:hover .catalog-item-image,
+.navigation-section-short:active .catalog-item-image {
+  opacity: 1;
+}
+
+.navigation-section-short:focus {
+  outline: 2px solid #AF4FFF;
 }
 
 .navigation-section-wide {
@@ -212,7 +222,7 @@ body {
 
 .badge {
   position: absolute;
-  top: 4px;
+  top: 1px;
   left: -15px;
   display: flex;
   align-items: center;
@@ -241,6 +251,56 @@ body {
   color: #000000;
   text-decoration: none;
   margin-left: 10px;
+}
+
+.catalog-item:focus-within .subcatalog {
+  display: flex;
+}
+
+.catalog-item-image {
+  width: 50px;
+  height: 50px;
+  background-image: url('../images/icons-batton-plus.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: .3;
+}
+
+.catalog-item:focus-within .catalog-item-image {
+  background-image: url('../images/icons-batton-minus.svg');
+}
+
+.subcatalog {
+  display: none;
+  position: absolute;
+  gap: 60px;
+  z-index: 1;
+  width: 1160px;
+  left: -60px;
+  padding: 0 60px;
+  margin-top: 15px;
+  box-sizing: border-box;
+
+  background-color: #FFE17F;
+}
+
+.subcatalog-item {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+
+  font-size: 16px;
+  line-height: 18px;
+}
+
+.subcatalog-item-wrapper {
+  margin-bottom: 24px;
+}
+
+.subcatalog-link {
+  text-decoration: none;
+  color: #000000;
 }
 
 .navigation-link {
@@ -332,21 +392,27 @@ body {
   position: relative;
 }
 
-.arrow {
-  position: absolute;
-  top: 211px;
-}
 
-.arrow-left {
-  left: 30px;
-}
-
-.arrow-right {
-  right: 0;
-}
 
 .slider-button {
-  margin-bottom: 60px;
+  margin-bottom: 40px;
+}
+
+.slider-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  width: 540px;
+  height: 100%;
+  top: -25px;
+  left: 26px;
+}
+
+.arrow {
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 .main-title {
@@ -562,6 +628,10 @@ body {
 
 .advantage-item {
   display: flex;
+}
+
+.advantage-item-not-active {
+  display: none;
 }
 
 .advantage-item-description {
@@ -866,6 +936,10 @@ body {
   background-color: #444444;
 }
 
+.status {
+  text-decoration: none;
+}
+
 .status-social:hover {
   border-radius: 50%;
   background-color: #FFC700;
@@ -1046,7 +1120,7 @@ body {
 
 .filter-wrapper {
   max-width: 200px;
-  padding: 25px 60px 0 60px;
+  padding: 20px 60px 0 60px;
 }
 
 .breadcrumbs {
@@ -1095,9 +1169,109 @@ body {
   width: 840px;
 }
 
+.range {
+  margin-top: 27px;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  margin-bottom: 7px;
+  background-color: #DCDCDC;
+  border-radius: 2px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #000000;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #EBEBEB;
+  border: 2px solid #000000;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* .range-toggle:hover {
+  opacity: 0.5;
+}
+
+.range-toggle:active {
+  background-color: #000000;
+}
+
+.range-toggle:focus {
+  outline: 2px solid #AF4FFF;
+} */
+
+.toggle-min {
+  top: -8px;
+  left: -10px;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -10px;
+}
+
+.range-wrapper-inputs {
+  display: flex;
+}
+
+.catalog-filter-label {
+  display: flex;
+  margin-right: 5px;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, .3);
+}
+
+.range-input {
+  width: 15px;
+  padding: 0 2px;
+  font: inherit;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  appearance: textfield;
+  outline: none;
+  color:rgba(0, 0, 0, .3)
+}
+
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
 .catalog-products {
   display: flex;
   background-color: #F0F0F0;
+}
+
+.catalog-filter-group {
+  border: none;
+  border-bottom: 2px solid black;
+  margin: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-block-start: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
+  padding-block-end: 0;
+  min-inline-size: auto;
+  padding-bottom: 28px;
+  margin-top: 12px;
+}
+
+.catalog-filter-group:last-of-type {
+  border-bottom: none;
+  padding-bottom: 0;
 }
 
 .filter-title {
@@ -1108,7 +1282,7 @@ body {
   text-transform: uppercase;
   margin: 0;
   border-bottom: 2px solid #000000;
-  padding-bottom: 58px;
+  padding-bottom: 52px;
 }
 
 .select-control {
@@ -1126,6 +1300,43 @@ body {
   align-items: center;
 }
 
+.sort-icon-up {
+  border-style: solid;
+  border-color: transparent;
+  border-width: 0 6px 10px 6px;
+  border-bottom-color: rgba(0, 0, 0, .2);
+}
+
+.sort-icon-down {
+  border-width: 10px 6px 0 6px;
+  border-style: solid;
+  border-color: transparent;
+  border-top-color: rgba(0, 0, 0, .2);
+}
+
+.sort-icon-up:hover {
+  border-bottom-color: rgba(0, 0, 0, .5);
+}
+
+.sort-icon-down:hover {
+  border-top-color: rgba(0, 0, 0, .5);
+}
+
+.sort-icon-up:active {
+  border-bottom-color: rgba(0, 0, 0, 1);
+}
+
+.sort-icon-down:active {
+  border-top-color: rgba(0, 0, 0, 1);
+}
+
+.sort-icon-up:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.sort-icon-down:focus {
+  outline: 2px solid #AF4FFF;
+}
 
 .catalog-filter {
   margin-top: 8px;
@@ -1136,13 +1347,117 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
+  padding: 0;
+}
+
+.catalog-filter-list {
+  padding: 0;
+  margin: 0;
 }
 
 .catalog-filter-item {
   font-size: 16px;
   line-height: 20px;
-
   list-style-type: none;
+  margin-top: 18px;
+}
+
+.control {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.control:hover {
+  opacity: .6;
+}
+
+.control:active {
+  opacity: .3;
+}
+
+.control input:disabled {
+  opacity: .1;
+}
+
+.control input:disabled ~ span {
+  opacity: .1;
+}
+
+.control input:focus ~ .checkmark, .control input:focus ~ .radiomark {
+  outline: 2px solid #AF4FFF;
+}
+
+.control input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark, .radiomark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border: 2px solid #CCCCCC;
+  box-sizing: border-box;
+}
+
+.checkmark {
+  border-radius: 3px;
+}
+
+.radiomark {
+  border-radius: 50%;
+}
+
+.control .checkmark:after {
+  left: 4px;
+  top: 1px;
+  width: 4px;
+  height: 9px;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.control .radiomark::after {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: black;
+  top: 4px;
+  left: 4px;
+}
+
+.control input:checked ~ .checkmark:after,
+.control input:checked ~ .radiomark:after {
+  display: block;
+}
+
+.checkmark:after, .radiomark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.control input:checked ~ .checkmark, .control input:checked ~ .radiomark {
+  border-color: black;
 }
 
 .catalog-filter-button {
@@ -1342,4 +1657,402 @@ body {
   text-decoration: none;
 
   color: #000000;
+}
+
+/* modal */
+
+.delivery-modal-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(240, 240, 240, 0.9);
+  z-index: 5;
+  display: flex;
+  align-items: center;
+}
+
+.delivery-modal {
+  margin: 0 auto;
+  width: 920px;
+  height: 570px;
+  background-color: #ffffff;
+  border: 10px solid #000000;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+  padding: 63px 70px;
+  box-sizing: border-box;
+}
+
+.delivery-modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.delivery-modal-header-title {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-size: 50px;
+  line-height: 50px;
+  font-weight: 800;
+}
+
+.delivery-modal-header-close {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.delivery-modal-header-close:hover {
+  opacity: .6;
+}
+
+.delivery-modal-header-close:active {
+  opacity: .3;
+}
+
+.delivery-modal-header-close:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.delivery-modal-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+    "name name email email"
+    "deliver deliver deliver counter";
+  column-gap: 29px;
+  row-gap: 35px;
+  margin-top: 40px;
+}
+
+.name-field {
+  grid-area: name;
+}
+
+.email-field {
+  grid-area: email;
+}
+
+.deliver-field {
+  grid-area: deliver;
+}
+
+.counter {
+  grid-area: counter;
+}
+
+.delivery-modal-form-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.delivery-modal-form-field:hover input {
+  background: #DCDCDC;
+}
+
+.delivery-modal-form-field:hover input:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.delivery-modal-form-field img {
+  position: absolute;
+  right: 20px;
+  top: 64px;
+}
+
+.delivery-modal-form-field input {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  background: #F0F0F0;
+  padding: 20px;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  max-height: 60px;
+}
+
+.delivery-modal-form-field label {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 14px;
+  min-height: 26px;
+}
+
+.delivery-modal-form-field input::placeholder {
+  color:rgba(0, 0, 0, .3);
+}
+
+.delivery-modal-form-field.error input {
+  border: 2px solid #FF3D3D;
+}
+
+.field-error {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FF3D3D;
+}
+
+.counter-title {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  margin-bottom: 14px;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.counter-title span {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  background-color: #FFE17F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+}
+
+.counter-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 60px;
+  background: #F0F0F0;
+  box-sizing: border-box;
+}
+
+.counter-wrapper.error {
+  border: 2px solid #FF3D3D;
+}
+
+.counter-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 22px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.counter-number {
+  padding: 22px;
+}
+
+.delivery-modal-button {
+  margin-top: 38px;
+  padding: 10px 30px;
+}
+
+/* popover */
+
+.popover-wrapper {
+  position: relative;
+}
+
+.popover-content {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  left: -139px;
+  top: 37px;
+  width: 320px;
+  z-index: 6;
+  background-color: black;
+}
+
+.popover-content:before {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  right: calc(50% - 7px);
+  top: -6px;
+  border-style: solid;
+  border-width: 0 7px 6px 7px;
+  border-color: transparent transparent black transparent;
+}
+
+.popover-wrapper:hover .popover-content {
+  z-index: 10;
+  opacity: 1;
+  visibility: visible;
+}
+
+.basket-item {
+  width: 100%;
+  display: flex;
+  padding: 20px;
+  box-sizing: border-box;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.basket-item:hover {
+  opacity: .6;
+}
+
+.basket-item:active {
+  opacity: .3;
+}
+
+.basket-item:focus .basket-item-description {
+  outline: 2px solid #AF4FFF;
+}
+
+.basket-item-close {
+  display: flex;
+  align-items: flex-start;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
+.basket-item-close:hover {
+  opacity: .6;
+}
+
+.basket-item-close:active {
+  opacity: .3;
+}
+
+.basket-item-close:focus img {
+  outline: 2px solid #AF4FFF;
+}
+
+.basket-item:last-of-type {
+  border-bottom: none;
+}
+
+.basket-item-description {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  text-decoration: none;
+}
+
+.basket-item-description img {
+  width: 39px;
+  height: 43px;
+}
+
+.basket-item-description span {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  max-width: 120px;
+}
+
+.popover-content-result {
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Rubik', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: white;
+  background: #1A1A1A;
+}
+
+.popover-content-button-wrapper {
+  padding: 20px;
+}
+
+.popover-content-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 0;
+  text-decoration: none;
+  border: none;
+  text-transform: uppercase;
+  color: black;
+  font-family: 'Raleway', serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.18em;
+  background-color: white;
+}
+
+.popover-content-button:hover {
+  background: #FFE17F;
+}
+
+.popover-content-button:active {
+  background: #FFE17F;
+}
+
+.popover-content-button:active span {
+  opacity: .3;
+}
+
+.popover-content-button:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.popover-content-button:disabled {
+  opacity: .3;
+}
+
+.counter-popover-wrapper {
+  position: relative;
+}
+
+.counter-popover-content {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  left: -141px;
+  top: 35px;
+  width: 320px;
+  z-index: 6;
+  background-color: black;
+  color: white;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 20px;
+  max-width: 200px;
+  box-sizing: border-box;
+}
+
+.counter-popover-content:before {
+  position: absolute;
+  z-index: -1;
+  content: "";
+  right: 40px;
+  top: -6px;
+  border-style: solid;
+  border-width: 0 7px 6px 7px;
+  border-color: transparent transparent black transparent;
+}
+
+.counter-popover-wrapper:hover .counter-popover-content {
+  z-index: 10;
+  opacity: 1;
+  visibility: visible;
 }
