--- a/styles/styles.css
+++ b/styles/styles.css
@@ -495,12 +495,6 @@ body {
   background-image: url('../images/icons-arrow-left.svg');
 }
 
-.contacts-line {
-  width: 84px;
-  height: 7px;
-  background-color: black;
-}
-
 .main-title {
   font-family: 'Raleway', sans-serif;
   font-style: normal;
@@ -833,6 +827,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position: relative;
+}
+
+.contacts::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 84px;
+  height: 7px;
+  background-color: black;
 }
 
 .contacts-address-text {
